# KatoSync

./: .gitignore  MEMORY.md  PROJECT_STATUS_FLOW.md  README.md  index.html  package-lock.json  package.json
docs/: ARCHITECTURE.md  KATOSYNC_2_0_ACTION_HUB_PLAN.md  KATOSYNC_ERKLAERVIDEO_NOTEBOOKLM.md  KATOSYNC_PRESENTATION.md  KATOSYNC_PROMO_VIDEO_PROMPTS.md  MISTRAL_API_NOTES.md  MISTRAL_WORK_SCHEDULER.md  RELEASE_OWNER_RUNBOOK.md  release-env.example.sh
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: bundle-poppler.sh
src-tauri/src/: lib.rs  main.rs
src/components/: DiagramComponents.tsx  Primitives.tsx  RichMarkdown.tsx
src/i18n/: index.ts
src/i18n/locales/: de.ts  en.ts  es.ts  ru.ts
src/lib/: briefingExport.ts  clipboard.ts  cockpit.ts  defaults.ts  license.ts  runHistory.ts  skillTemplate.ts  url.ts
src/repositories/: katoSyncRepository.ts
src/viewmodels/: useKatoSyncViewModel.ts
tests/fixtures/sample-project/: .env  MEMORY.md  Projektstatusflow.md  roadmap.md
